--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 
 <script>
 document.getElementById("404-content").innerHTML = 
-"The URL is:<br>" + window.location.href;
+"Requested Page:" + window.location.href;
 </script>
 
 </body>
